--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,11 @@
+<%= link_to 'イベント追加', new_event_path %>
 <%= month_calendar events: @events do |date, events| %>
   <%= date.day %>
+  <% events.each do |event| %>
+    <div>
+      <%= event.title %>
+    </div>
+  <% end %>
 <% end %>
+
+
