--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
   <%= date.day %>
   <% events.each do |event| %>
     <div>
-      <%= event.title %>
+      <%= link_to event.title, event_path(event.id), method: :get%>
     </div>
   <% end %>
 <% end %>
